@startuml
'https://plantuml.com/class-diagram

EventLoop *-- Poller
EventLoop o-- Channel
EventLoop "add timers" *-- TimerQueue
Poller - Channel : wait events >
TimerQueue - Channel : registry >

class Channel {
    - fd_: File Descriptor
    + handleEvent()
}

class Poller {
    + poll()
}

class TimerQueue {
    + addTimer()
}

class EventLoop {
    - vector<functor> pendingFunctors
    + loop()
    + queueInLoop()
    + runAt(), runAfter(), runEvery()
}

@enduml